# Project-Butters

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.md  README.md  SLIPPAGE_ARCHITECTURE.md  SLIPPAGE_BUG_SUMMARY.md  SLIPPAGE_DOCUMENTATION_INDEX.md  butters.service  config.toml  run-live.sh  start-live.sh  start-sniper.sh  start.sh
.claude-flow/metrics/: system-metrics.json
.serena/: project.yml
.swarm/: memory.db-shm  memory.db-wal
analysis/: jupiter_api.md
config/: devnet.toml
docs/: ADX_REGIME_DETECTION.md  ADX_TECHNICAL_SPECIFICATION.md  ARCHITECTURE_ADDITIONS.md  DEFENSIVE_EXIT_ARCHITECTURE.md  INTEGRATION_GUIDE.md  REGIME_DETECTION_OVERVIEW.md  ports.md
docs/bugs/: BUG-001-P0-STATE_DESYNC.md  BUG-002-P0-SLIPPAGE_MISMATCH.md  BUG-003-P0-EXIT_RETRY_EXPOSURE.md  BUG-004-P1-CONFIRM_TIMEOUT.md  BUG-005-P1-EXIT_RACE.md  BUG-006-P2-ZSCORE_SEMANTICS.md  BUG-007-P2-RISK_BYPASS.md
fixtures/jupiter/: README.md  quote_high_impact_v1.json  quote_multi_hop_v1.json  quote_sol_usdc_v1.json  swap_priority_v1.json  swap_standard_v1.json
scripts/: install-service.sh  install-wallet-scripts.sh  ironwatch-monitor.sh  setup-devnet.sh  setup-mainnet-wallet.sh  wallet_balance.sh  wallet_recent_txs.sh  wallet_show_address.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/application/: meme_orchestrator.rs  mod.rs  orchestrator.rs  orchestrator.rs.backup
src/config/: loader.rs  mod.rs
src/domain/: balance_guard.rs  circuit_breaker.rs  honeypot_detector.rs  known_programs.rs  liquidity_guard.rs  mod.rs  risk.rs  (+9 more)
tests/: meme_integration.rs
(+56 files in other folders)
