[package]
name = "butters-sniper"
version = "0.1.0"
edition = "2021"
description = "Extreme Z-Score Sniper Bot for Solana/Jupiter - Only trades on 3+ consecutive extreme deviations"
authors = ["Kyzo-Dex Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Solana SDK
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
spl-token = "6.0"

# Jupiter API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & Statistics
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
statrs = "0.17"
rand = "0.8"

# Configuration
config = "0.14"
toml = "0.8"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base58/64 encoding
bs58 = "0.5"
base64 = "0.22"

# Serialization
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
approx = "0.5"
tempfile = "3.8"
regex = "1.10"

[[bin]]
name = "butters-sniper"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
